# Kinetix

./: LICENSE  README.md  pyproject.toml
code/: runner.py
code/kinetix/: base.py  kinetix.py  parser.py
examples/: allulose.yaml  glucose_kinase.yaml  programmatic.py
examples/csvs/: alu.csv  gluc.csv
src/kinetix/: base.py  parser.py  runner.py
