[tool.poetry]
name = "kinetix"
version = "0.1.0"
description = "A simple lightweight library for simulating and plotting enzyme kinetics"
authors = [
    "Lior Zimmerman <zimmerman.lior@gmail.com>"
]
readme = "README.md"
python = ">=3.7"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
[tool.poetry.dependencies]
matplotlib = ">=3.1.3"
seaborn = ">=0.12.0"
pandas = ">=1.1.5"
networkx = ">=2.5"

[tool.poetry.scripts]
kinetix = "kinetix.runner:main"


[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
